bpo-25828: Fix PyCode_Optimize for handling exceptions